--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -118,9 +118,10 @@
     
     <string name="propuestas_question">Pregunta</string>
     <string name="propuestas_question_sings">¿?</string>
+    <string name="propuestas_question_chart_title">Datos recabados hasta el momento</string>
     
     <string name="propuestas_btn_comments_vermas">Ver comentarios</string>
-    <string name="propuestas_btn_comments_hintcomment">Escribe un comentario</string>
+    <string name="propuestas_btn_comments_hintcomment">Escribe un argumento</string>
     <string name="propuestas_btn_comments_sendcomment">Enviar</string>
     
     <!-- Validations EditText -->
